--- a/style.css
+++ b/style.css
@@ -148,5 +148,14 @@ section{
 }
 #section2 .imgcon{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin: 44px 130px 0px;
+    gap: 24px;
+    text-align: center;
+}
+#section2 .imgcon .imgin{
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 8px;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+    padding: 69.5px 24px;
 }
