--- a/style.css
+++ b/style.css
@@ -159,3 +159,37 @@ section{
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
     padding: 69.5px 24px;
 }
+#section3{
+    display: flex;
+    margin: 120px;
+    align-items: center;
+    gap: 60px;
+    background-color: rgba(255, 255, 255, 1)
+}
+#section3 .section3-img img{
+    max-width: 600px;
+}
+.section3-text-list .section3-text .p1{
+    font-size: 16px;
+    font-weight: 500;
+    color: rgba(70, 145, 101, 1);
+    margin-bottom: 16px;
+}
+.section3-text-list .section3-text h3{
+    font-size: 48px;
+    font-weight: 700;
+    color: rgba(0, 25, 49, 1);
+    margin-bottom: 16px;
+}
+.section3-text-list .section3-text .p2{
+    font-size: 16px;
+    font-weight: 400;
+    color:  rgba(98, 115, 130, 1);
+    margin-bottom: 40px;
+}
+.section3-text-list .section3-list li{
+    list-style-type: none;
+    color: rgba(0, 25, 49, 1);
+    display: flex;
+    /* jani na kemne display flex deyate image er text aligned hoye gelo akta line e, supports session e jigassha korte hobe. */
+}
