--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ section{
 #section4 .section4-button button{
 background-color: rgba(70, 145, 101, 1);
 border: none;
-padding: 16.5px 16px;
+padding: 16.5px;
 border-radius: 4px;
 box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
 color: rgba(255, 255, 255, 1);
@@ -228,4 +228,34 @@ margin-bottom: 16px;
     font-size: 16px;
     font-weight: 400;
     color: rgba(98, 115, 130, 1);
+}
+#footer .footer-con{
+    /* background-color:  rgba(0, 25, 49, 1);
+    color: rgba(255, 255, 255, 1); */
+    display: flex;
+    justify-content:space-between;
+    /* padding: 120px 120px 79.5px; */
+}
+#footer{
+    background-color:  rgba(0, 25, 49, 1);
+    color: rgba(255, 255, 255, 1);
+    padding: 120px 120px 79.5px;
+
+}
+#footer hr{
+    border: 1px solid rgba(70, 145, 101, 1);
+    margin-top: 84px;
+}
+#footer .footer-icon i{
+    border: 1px solid rgba(255, 255, 255, 1);
+    border-radius: 50%;
+    gap: 16px;
+}
+.copyright{
+    background-color:  rgba(0, 25, 49, 1);
+    color: rgba(250, 250, 250, 1);
+    text-align: center;
+    padding-bottom: 30px;
+    font-size: 16px;
+    font-weight: 400;
 }
