assignment done, not pixel perfect.

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ section{
     text-align: center;
     background: url(./assets/hero-bg.png);
     background-repeat: no-repeat;
+    margin: 0 auto;
 }
 #section2 .hp h1{
     color: rgba(0, 25, 49, 1);
@@ -162,19 +163,22 @@ section{
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
     padding: 69.5px 24px;
     cursor: pointer;
+    margin-bottom: 120px;
 }
 #section2 .imgcon .imgin:hover{
     background: rgb(111, 108, 108);
 }
 #section3{
     display: flex;
-    margin: 120px;
+    max-width: 1360px;
+    margin: 0 auto;
     align-items: center;
     gap: 60px;
     background-color: rgba(255, 255, 255, 1)
 }
 #section3 .section3-img img{
     max-width: 600px;
+
 }
 .section3-text-list .section3-text .p1{
     font-size: 16px;
@@ -202,7 +206,7 @@ section{
 }
 #section4{
     border-radius: 12px;
-    margin: 0px 120px 120px;
+    margin: 120px 120px;
     background: rgba(247, 246, 242, 1);
     text-align: center;
     padding: 80px 40px;
