--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ section{
 }
 #section4{
     border-radius: 12px;
-    margin: 120px 120px;
+    margin:120px;
     background: rgba(247, 246, 242, 1);
     text-align: center;
     padding: 80px 40px;
